addons/cilium/gateway/hubble-ui-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hubble-ui-route
  namespace: kube-system
  annotations:
    external-dns.alpha.kubernetes.io/hostname: "gateway-hubble.sctp-sandbox.com"
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: ListenerSet
      name: hubble-listeners
      sectionName: hubble-https
  hostnames:
    - gateway-hubble.sctp-sandbox.com
  rules:
    - backendRefs:
        - name: hubble-ui
          port: 80
